2007-05-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* Experimental reuse of the get-message service for IMAP

2007-05-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Refactored the TnyGtkPasswordDialog
	* Various fixes for the OLPC build
	* Various fixes for the Maemo mistal and gregale builds

2007-05-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Experimental connection recovery for IMAP
	* Letting IDLE/PushE-mail support code cope with connection failures

2007-05-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* libtinymail-camel-tny-camel-send-queue.c: various locking fixes

2007-05-24  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_get_iap): When running in scratchbox, 
	make sure that this returns an instance for a more complete fake 
	implementation.

2007-05-23  Murray Cumming  <murrayc@murrayc.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
	(recurse_folders_sync): Do not assume that the row instance is a 
	TnyFolderStore, because not all TnyFolders are TnyFolderStores. 
	This allows us to use this tree model with TnyMergeFolder.

2007-05-22  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-mime-message.c: (camel_mime_message_set_subject):
	Check that the input char* is not the same as the existing char*, 
	so we do not delete the input before using the input. This happens 
	when get_subject() is given directly to set_subject without a g_strdup(), 
	for instance.

2007-05-22  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-tcp-stream-openssl.c:
	(camel_tcp_stream_ssl_class_init): Add a g_warning() to warn people
	about using this unsupported alternative to NSS.

2007-05-21  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-tcp-stream-openssl.c: (socket_connect): When calling
	the standard connect () function, use sizeof (struct sockaddr) instead
	of just passing an uninitialized socklen_t, so that this can actually