@@ -1,3 +1,13 @@
+2007-05-28  Murray Cumming  <murrayc@murrayc.com>
+
+	* libtinymail-maemo/tny-maemo-conic-device.c:
+	(tny_maemo_conic_device_get_current_iap_id),
+	(on_dummy_connection_check),
+	(tny_maemo_conic_device_instance_init),
+	(tny_maemo_conic_device_finalize): Use a file ($HOME/maemo_conic_dummy_id) 
+	instead of an environment variable to set the dummy ID when using 
+	scratchbox so we can check it for changes every 1 second.
+	
 2007-05-28  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Experimental reuse of the get-message service for IMAP
